Some edits to avoid workflow fail

--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -3,7 +3,7 @@ name: Sync Upstream al-folio
 on:
   schedule:
     # Run on the 1st of every month at 9:00 AM UTC
-    - cron: '0 9 1 * *'
+    - cron: "0 9 1 * *"
   workflow_dispatch: # Allow manual trigger
 
 jobs:
